welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:13: error: not found: value color
fleur(color.GREEN)
      ^